# CeejiyeLang

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  RELEASE_NOTES.md  TELEGRAM.md  install.sh  nexuhub_prototype.html  project_requirements.txt  pyproject.toml  requirements.txt  server_log.txt  setup.py
.github/workflows/: publish.yml  test.yml  tests.yml
ceejiye/: __init__.py  cli.py  compiler.py  interpreter.py  lexer.py  pygments_lexer.py  repl.py  stdlib.py
ceejiye-playground/: app.py
ceejiye-playground/templates/: index.html
ceejiye-vscode-extension/: language-configuration.json  package.json
ceejiye-vscode-extension/snippets/: ceejiye.json
ceejiye-vscode-extension/syntaxes/: ceejiye.tmLanguage.json
ceejiye/std/: builtins.py
examples/: calculator.cee  functions.cee  guessing_game.cee  loops.cee  mini_chatbot.cee
frontend/: package-lock.json  package.json  tailwind.config.js
frontend/src/: App.jsx  config.js  index.css
frontend/src/components/: Hero.jsx  (+5 more)
github/workflows/: test.yml
playground/: index.html
server/: .gitignore  index.js  package-lock.json  package.json
server/db/: index.js
server/middleware/: auth.js
server/routes/: admin.js  auth.js  payments.js  products.js  sellers.js
tests/: test_ast.py  test_basic.cee  test_classes.cee  test_compiler.py  test_comprehensive.cee  test_errors.py  test_interpreter.py  test_keywords.cee  test_lexer_bugs.py  test_nested.cee  test_operators.cee  test_repl.py  test_stdlib.py  test_v1_0_0_keywords.cee
vscode-ceejiye/: package.json
vscode-ceejiye/snippets/: ceejiye.json
(+16 files in other folders)
