[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "ceejiyelang"
version = "3.0.0"
description = "Luuqadda programming-ka ee Af-Soomaali"
readme = "README.md"
license = {file = "LICENSE"}
requires-python = ">=3.7"
keywords = ["somali", "programming-language",
            "education", "transpiler", "african-languages"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Topic :: Education",
]
dependencies = [
    "click",
    "rich",
    "prompt_toolkit",
    "pygments",
    "colorama",
]

[project.scripts]
ceejiye = "ceejiye.cli:main"

[project.urls]
Homepage = "https://github.com/mohamettapthi75-dot/CeejiyeLang"
